# Intelligent-perception-and-control-system-IPCS-for-autonomous-vehicle

./: README.txt
testV/: CMakeLists.txt  package.xml
testV/src/: dangerD.py  detectColor.py  detectV.cpp
testV_msgs/: CMakeLists.txt  package.xml
testV_msgs/msg/: Signal.msg
yolov3 detector for slam/: bad.list
